k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-search-app
spec:
  rules:
    - http:
        paths:
          - path: /movie-search-app
            pathType: Prefix
            backend:
              service:
                name: movie-search-app
                port:
                  number: 80
